--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,11 @@ attrs==19.3.0
 black==19.10b0
 click==7.1.2
 Django==3.0.6
+envirophat==1.0.1
 pathspec==0.8.0
 pytz==2020.1
 regex==2020.5.14
+RPi.GPIO==0.7.0
 sqlparse==0.3.1
 toml==0.10.1
 typed-ast==1.4.1
